--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,6 @@ theme: landscape
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: 'git'
-  repo: https://github.com/203405050120/203405050120.github.io.git
-  branch: master
+  repo: git@github.com:203405050120/203405050120.github.io.git
+  branch: main
   message: Blog
