--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: landscape
 deploy:
   type: 'git'
   repo: git@github.com:203405050120/203405050120.github.io.git
-  branch: master
+  branch: main
   message: Blog
